# rainbo-wc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/rainbo_wc/: file_reader.rs  file_statistics.rs  mod.rs  rainbow_writer.rs
