[package]
name = "rainbo-wc"
version = "0.1.0"
edition = "2024"
description = "A more colourful version of wc"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/mockillo/rainbo-wc"
homepage = "https://github.com/mockillo/rainbo-wc"
documentation = "https://github.com/mockillo/rainbo-wc"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
